Changed args to message

--- a/.github/workflows/tmessage.yml
+++ b/.github/workflows/tmessage.yml
@@ -12,5 +12,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        args: The ${{ github.event_name }} event triggered first step.
-        echo This event is a push request.
+        message: There was a ${{ github.event_name }} event to this repository.
