--- a/.github/workflows/tmessage.yml
+++ b/.github/workflows/tmessage.yml
@@ -12,4 +12,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: There was a ${{ github.event_name }} event to this repository.
+        message: Good day, ${{ github.repository_owner }}! There was a ${{ github.event_name }} event in ${{ github.repository }}.
